--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,9 +1,10 @@
 name: Publish Node.js Package
 
 on:
+  push:
+    branches:
+      - main
   workflow_dispatch:
-  release:
-    types: [created]
 
 jobs:
   publish-npm:
@@ -15,7 +16,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: latest
-          registry-url: 'https://registry.npmjs.org'
+          registry-url: "https://registry.npmjs.org"
 
       - name: Install Deps
         run: npm install
