--- a/cli-rs/Cargo.toml
+++ b/cli-rs/Cargo.toml
@@ -1,15 +1,23 @@
 [package]
-name = "cli-rs"
+name = "ahqstore_cli_rs"
 version = "1.0.0"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib"]
+path = "src/lib.rs"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "ahqstore"
+path = "src/main.rs"
+
 [dependencies]
 node-bindgen = "6.0.1"
 tslink = "0.1.0"
+ahqstore-types = { git = "https://github.com/ahqsoftwares/tauri-ahq-store.git" }
+inquire = "0.6.2"
+chalk_rs = "1.0.1"
+lazy_static = "1.4.0"
 
 [build-dependencies]
 node-bindgen = { version = "6.0.1", default-features = false, features = [
