--- a/cli/package.json
+++ b/cli/package.json
@@ -1,17 +1,16 @@
 {
   "name": "@ahqstore/cli",
   "version": "1.0.0-rc2",
-  "description": "",
+  "description": "The CLI tool for AHQ Store",
   "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "./src/cli.js",
+  "scripts": {},
   "dependencies": {
     "chalk": "^5.3.0"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "AHQ Softwares",
+  "license": "MIT",
   "bin": {
     "ahqstore": "./src/cli.js"
   }
