--- a/.github/workflows/publish-rs.yml
+++ b/.github/workflows/publish-rs.yml
@@ -54,11 +54,7 @@ jobs:
   publish-cargo:
     name: Build & Publish cli to cargo
 
-    strategy:
-      matrix:
-        platform: [windows-latest, ubuntu-latest]
-
-    runs-on: ${{ matrix.platform }}
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
