--- a/cli-js/package.json
+++ b/cli-js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ahqstore/cli",
-  "version": "1.0.0-rc3",
+  "version": "1.0.0-rc4",
   "description": "The CLI tool for AHQ Store",
   "type": "module",
   "main": "./src/cli.js",
@@ -16,7 +16,7 @@
   "author": "AHQ Softwares",
   "license": "MIT",
   "bin": {
-    "ahqstore": "./src/cli.js"
+    "ahqstore": "src/cli.js"
   },
   "bugs": {
     "url": "https://github.com/ahqstore/cli/issues"
