--- a/.github/workflows/publish-rs.yml
+++ b/.github/workflows/publish-rs.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: latest
-          registry-url: https://registry.npmjs.org
+          registry-url: https://registry.npmjs.com
 
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
