--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: latest
-          registry-url: https://registry.npmjs.org
+          registry-url: https://registry.npmjs.com
 
       - name: Install Deps
         run: npm install
