--- a/cli-js/package.json
+++ b/cli-js/package.json
@@ -8,7 +8,9 @@
     "type": "git",
     "url": "git+https://github.com/ahqstore/cli.git"
   },
-  "scripts": {},
+  "scripts": {
+    "postinstall": "node install.js"
+  },
   "dependencies": {
     "chalk": "^5.3.0"
   },
