--- a/.github/workflows/publish-rs.yml
+++ b/.github/workflows/publish-rs.yml
@@ -65,7 +65,7 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
 
       - name: Test Rust Binary
-        run: cargo bulid
+        run: cargo build
         working-directory: cli-rs
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_TOKEN }}
