--- a/cli-js/package.json
+++ b/cli-js/package.json
@@ -12,6 +12,8 @@
     "postinstall": "node install.js"
   },
   "dependencies": {
+    "@ahqstore/cli-rs-linux": "1.0.0-rc1",
+    "@ahqstore/cli-rs-win32": "1.0.0-rc1",
     "chalk": "^5.3.0"
   },
   "keywords": [
