--- a/cli-js/package.json
+++ b/cli-js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ahqstore/cli",
-  "version": "1.0.0-rc7",
+  "version": "1.0.0-rc8",
   "description": "The AHQ Store CLI",
   "type": "module",
   "main": "./src/cli.js",
@@ -12,9 +12,12 @@
     "postinstall": "node install.js"
   },
   "dependencies": {
-    "@ahqstore/cli-rs-linux": "1.0.0-rc3",
-    "@ahqstore/cli-rs-win32": "1.0.0-rc3",
-    "@ahqstore/cli-rs-darwin": "1.0.0-rc3",
+    "@ahqstore/cli-rs-win32-x64": "1.0.0-rc3",
+    "@ahqstore/cli-rs-win32-arm64": "1.0.0-rc3",
+    "@ahqstore/cli-rs-darwin-x64": "1.0.0-rc3",
+    "@ahqstore/cli-rs-darwin-arm64": "1.0.0-rc3",
+    "@ahqstore/cli-rs-linux-x64": "1.0.0-rc3",
+    "@ahqstore/cli-rs-linux-arm64": "1.0.0-rc3",
     "chalk": "^5.3.0"
   },
   "keywords": [
