--- a/.github/workflows/publish-rs.yml
+++ b/.github/workflows/publish-rs.yml
@@ -58,12 +58,6 @@ jobs:
         run: sudo apt install gcc-aarch64-linux-gnu
         if: matrix.platform == 'ubuntu-latest'
 
-      - name: Windows Setup ARM
-        if: matrix.platform == 'windows-latest'
-        uses: ilammy/msvc-dev-cmd@v1
-        with:
-          arch: amd64_arm64
-
       - name: Install nj cli
         run: cargo install nj-cli
         working-directory: cli-rs
@@ -88,17 +82,20 @@ jobs:
 
       - name: Build Node (ARM)
         run: nj-cli build --target ${{ steps.arm.outputs.result }} --release
+        if: matrix.platform != 'windows-latest'
         env:
           TSLINK_BUILD: "true"
         working-directory: cli-rs
 
       - name: Finalize ARM
+        if: matrix.platform != 'windows-latest'
         run: node finalize.js
         working-directory: cli-rs
         env:
           arch: arm64
 
       - name: Publish ARM
+        if: matrix.platform != 'windows-latest'
         run: npm publish --scope ahqstore --access public --verbose
         working-directory: cli-rs/dist
         env:
@@ -117,8 +114,8 @@ jobs:
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Test Rust Binary
-        run: cargo publish
+      - name: Publish Rust Binary
+        run: cargo publish --release
         working-directory: cli-rs
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_TOKEN }}
