--- a/.github/workflows/publish-rs.yml
+++ b/.github/workflows/publish-rs.yml
@@ -115,7 +115,7 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
 
       - name: Publish Rust Binary
-        run: cargo publish --release
+        run: cargo publish
         working-directory: cli-rs
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_TOKEN }}
