--- a/cli-rs/Cargo.toml
+++ b/cli-rs/Cargo.toml
@@ -20,12 +20,12 @@ path = "src/main.rs"
 [dependencies]
 node-bindgen = { version = "6.0.1", optional = true }
 tslink = { version = "0.1.0", optional = true }
-ahqstore-types = { path = "./types" }
 inquire = { version = "0.6.2", features = ["editor"] }
 chalk_rs = "1.0.1"
 lazy_static = "1.4.0"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
+ahqstore-types = "1.3.6"
 
 [build-dependencies]
 node-bindgen = { version = "6.0.1", default-features = false, features = [
