--- a/.github/workflows/publish-rs.yml
+++ b/.github/workflows/publish-rs.yml
@@ -63,7 +63,7 @@ jobs:
         working-directory: cli-rs
 
       - name: Build Node
-        run: nj-cli build -- --features node --release
+        run: nj-cli build --release -- --features node
         env:
           TSLINK_BUILD: "true"
         working-directory: cli-rs
@@ -81,7 +81,7 @@ jobs:
           token: ${{ secrets.NPM_TOKEN }}
 
       - name: Build Node (ARM)
-        run: nj-cli build --target ${{ steps.arm.outputs.result }} -- --features node --release
+        run: nj-cli build --target ${{ steps.arm.outputs.result }} --release -- --features node
         if: matrix.platform != 'windows-latest'
         env:
           TSLINK_BUILD: "true"
