--- a/cli-js/package.json
+++ b/cli-js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ahqstore/cli",
-  "version": "1.0.0-rc9",
+  "version": "0.0.1",
   "description": "The AHQ Store CLI",
   "type": "module",
   "main": "./src/cli.js",
@@ -12,11 +12,11 @@
     "postinstall": "node install.js"
   },
   "dependencies": {
-    "@ahqstore/cli-rs-win32-x64": "1.0.0-rc10",
-    "@ahqstore/cli-rs-darwin-x64": "1.0.0-rc10",
-    "@ahqstore/cli-rs-darwin-arm64": "1.0.0-rc10",
-    "@ahqstore/cli-rs-linux-x64": "1.0.0-rc10",
-    "@ahqstore/cli-rs-linux-arm64": "1.0.0-rc10",
+    "@ahqstore/cli-rs-win32-x64": "0.0.1",
+    "@ahqstore/cli-rs-darwin-x64": "0.0.1",
+    "@ahqstore/cli-rs-darwin-arm64": "0.0.1",
+    "@ahqstore/cli-rs-linux-x64": "0.0.1",
+    "@ahqstore/cli-rs-linux-arm64": "0.0.1",
     "chalk": "^5.3.0"
   },
   "keywords": [
