--- a/cli-rs/Cargo.toml
+++ b/cli-rs/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ahqstore_cli_rs"
-version = "0.0.1"
+version = "0.0.2"
 edition = "2021"
 description = "AHQ Store CLI"
 repository = "https://github.com/ahqstore/cli"
@@ -25,7 +25,11 @@ chalk_rs = "1.0.1"
 lazy_static = "1.4.0"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
-ahqstore-types = "1.3.6"
+ahqstore-types = "1.4.0-rc4"
+reqwest = { version = "0.11.23", features = ["json", "blocking"] }
+sha2 = "0.10.8"
+base64 = "0.21.5"
+image = "0.24.7"
 
 [build-dependencies]
 node-bindgen = { version = "6.0.1", default-features = false, features = [
