--- a/cli-rs/Cargo.toml
+++ b/cli-rs/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "ahqstore_cli_rs"
-version = "0.0.5"
+version = "0.1.0"
 edition = "2021"
 description = "AHQ Store CLI"
 repository = "https://github.com/ahqstore/cli"
 homepage = "https://github.com/ahqstore/cli"
 license = "MIT"
 exclude = ["dist/**", ".ahqstore/**", "finalize.js", "tslink.toml"]
+readme = "README.md"
 
 [lib]
 name = "ahqstore_cli_rs"
