--- a/cli-js/package.json
+++ b/cli-js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ahqstore/cli",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "The AHQ Store CLI",
   "type": "module",
   "main": "./src/cli.js",
@@ -12,11 +12,11 @@
     "postinstall": "node install.js"
   },
   "dependencies": {
-    "@ahqstore/cli-rs-win32-x64": "0.1.0",
-    "@ahqstore/cli-rs-darwin-x64": "0.1.0",
-    "@ahqstore/cli-rs-darwin-arm64": "0.1.0",
-    "@ahqstore/cli-rs-linux-x64": "0.1.0",
-    "@ahqstore/cli-rs-linux-arm64": "0.1.0",
+    "@ahqstore/cli-rs-win32-x64": "0.1.1",
+    "@ahqstore/cli-rs-darwin-x64": "0.1.1",
+    "@ahqstore/cli-rs-darwin-arm64": "0.1.1",
+    "@ahqstore/cli-rs-linux-x64": "0.1.1",
+    "@ahqstore/cli-rs-linux-arm64": "0.1.1",
     "chalk": "^5.3.0"
   },
   "keywords": [
@@ -31,5 +31,8 @@
   "bugs": {
     "url": "https://github.com/ahqstore/cli/issues"
   },
-  "homepage": "https://github.com/ahqstore/cli#readme"
+  "homepage": "https://github.com/ahqstore/cli#readme",
+  "engines": {
+    "node": ">=16"
+  }
 }
