--- a/cli-rs/Cargo.toml
+++ b/cli-rs/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ahqstore_cli_rs"
-version = "0.2.3"
+version = "0.2.4"
 edition = "2021"
 description = "AHQ Store CLI"
 repository = "https://github.com/ahqstore/cli"
@@ -26,11 +26,11 @@ chalk_rs = "1.0.1"
 lazy_static = "1.4.0"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
-ahqstore-types = "1.4.0-rc6"
-reqwest = { version = "0.11.24", features = ["json", "blocking"] }
+ahqstore-types = "1.4.1"
+reqwest = { version = "0.12", features = ["json", "blocking"] }
 sha2 = "0.10.8"
 base64 = "0.22.0"
-image = "0.24.9"
+image = "0.25"
 rand = "0.8.5"
 
 [target.aarch64-unknown-linux-gnu.dependencies]
