--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -257,7 +257,7 @@ jobs:
       - name: List packages
         run: ls -R ./npm
         shell: bash
-      - name: Publish
+      - name: NPM Publish
         run: |
           npm config set provenance true
           if git log -1 --pretty=%B | grep "^[0-9]\+\.[0-9]\+\.[0-9]\+$";
