--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,9 +21,8 @@ sha2 = "0.10.8"
 base64 = "0.22.1"
 image = "0.25"
 rand = "0.8.5"
+openssl-sys = { version = "*", features = ["vendored"] }
 
-[target.'cfg(not(any(windows, target_os="macos")))'.dependencies]
-openssl = { version = "0.10.64", features = ["vendored"] }
 
 [build-dependencies]
 napi-build = {version = "2.0.1", optional = true}
