--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -135,13 +135,17 @@ jobs:
           architecture: x86
       - name: Install pnpm
         run: npm i -g pnpm
-      - name: Build in docker
-        uses: addnab/docker-run-action@v3
+      # - name: Build in docker
+        #uses: addnab/docker-run-action@v3
+        #if: ${{ matrix.settings.docker }}
+        #with:
+         # image: ${{ matrix.settings.docker }}
+          #options: '--user 0:0 -v ${{ github.workspace }}/.cargo-cache/git/db:/usr/local/cargo/git/db -v ${{ github.workspace }}/.cargo/registry/cache:/usr/local/cargo/registry/cache -v ${{ github.workspace }}/.cargo/registry/index:/usr/local/cargo/registry/index -v ${{ github.workspace }}:/build -w /build'
+          #run: ${{ matrix.settings.build }}
+      - name: Cross Build
         if: ${{ matrix.settings.docker }}
-        with:
-          image: ${{ matrix.settings.docker }}
-          options: '--user 0:0 -v ${{ github.workspace }}/.cargo-cache/git/db:/usr/local/cargo/git/db -v ${{ github.workspace }}/.cargo/registry/cache:/usr/local/cargo/registry/cache -v ${{ github.workspace }}/.cargo/registry/index:/usr/local/cargo/registry/index -v ${{ github.workspace }}:/build -w /build'
-          run: ${{ matrix.settings.build }}
+        run: ${{ matrix.settings.build }}
+        
       - name: Build
         run: ${{ matrix.settings.build }}
         if: ${{ !matrix.settings.docker }}
