--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,11 +16,12 @@ lazy_static = "1.4.0"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
 ahqstore-types = "2.0.0"
-reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
+reqwest = { version = "0.12", features = ["json", "blocking"] }
 sha2 = "0.10.8"
 base64 = "0.22.1"
 image = "0.25"
 rand = "0.8.5"
+openssl-sys = { version = "*", features = ["vendored"] }
 
 
 [build-dependencies]
