--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -97,9 +97,8 @@ jobs:
         run: npm i -g pnpm
       - name: Install
         uses: dtolnay/rust-toolchain@stable
-        if: ${{ !matrix.settings.docker }}
         with:
-          toolchain: stable
+          toolchain: nightly
           targets: ${{ matrix.settings.target }}
       - name: Cache cargo
         uses: actions/cache@v4
@@ -145,7 +144,7 @@ jobs:
       - name: Cross Build
         if: ${{ matrix.settings.docker }}
         run: ${{ matrix.settings.build }}
-        
+
       - name: Build
         run: ${{ matrix.settings.build }}
         if: ${{ !matrix.settings.docker }}
