--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -120,6 +120,12 @@ jobs:
         shell: bash
       - name: Install pnpm
         run: npm i -g pnpm
+      - uses: shogo82148/actions-setup-perl@v1
+        with:
+          perl-version: "5.38"
+      - name: Linux Setup
+        if: ${{ matrix.settings.host }} == 'ubuntu-latest'
+        run: sudo apt update -y; sudo apt install -y gcc-aarch64-linux-gnu musl-tools --fix-missing
       - name: Setup node x86
         if: matrix.settings.target == 'i686-pc-windows-msvc'
         run: pnpm config set supportedArchitectures.cpu "ia32"
