--- a/package.json
+++ b/package.json
@@ -43,5 +43,6 @@
     "test": "ava",
     "universal": "napi universal",
     "version": "napi version"
-  }
+  },
+  "packageManager": "yarn@4.2.2"
 }
