arm64 + win32 fix

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -61,6 +61,9 @@ jobs:
           node-version: 20
       - name: Setup pnpm
         run: npm i -g pnpm
+      - name: Linux arm
+        run: sudo apt update; sudo apt install gcc-aarch64-linux-gnu --fix-missing
+        if: matrix.settings.host == 'ubuntu-latest'
       - name: Install
         uses: dtolnay/rust-toolchain@stable
         with:
