--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,8 @@ sha2 = "0.10.8"
 base64 = "0.22.1"
 image = "0.25"
 rand = "0.8.5"
+
+[target.'cfg(unix)'.dependencies]
 openssl-sys = { version = "*", features = ["vendored"] }
 
 
