--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ ahqstore-types = "2.0.0"
 reqwest = { version = "0.12", features = ["json", "blocking"] }
 sha2 = "0.10.8"
 base64 = "0.22.1"
-image = "0.25"
+image = { version = "0.25", default-features = false, features = ["rayon", "png"]}
 rand = "0.8.5"
 
 [target.'cfg(unix)'.dependencies]
