--- a/package.json
+++ b/package.json
@@ -6,16 +6,10 @@
     "triples": {
       "additional": [
         "aarch64-apple-darwin",
-        "aarch64-linux-android",
         "aarch64-unknown-linux-gnu",
-        "aarch64-unknown-linux-musl",
         "aarch64-pc-windows-msvc",
-        "armv7-unknown-linux-gnueabihf",
-        "armv7-unknown-linux-musleabihf",
-        "x86_64-unknown-linux-musl",
-        "x86_64-unknown-freebsd",
         "i686-pc-windows-msvc",
-        "armv7-linux-androideabi",
+        "x86_64-pc-windows-msvc",
         "universal-apple-darwin",
         "riscv64gc-unknown-linux-gnu"
       ]
