--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -157,6 +157,18 @@ jobs:
           name: bindings-universal-apple-darwin
           path: ${{ env.APP_NAME }}.*.node
           if-no-files-found: error
+  publish-cargo:
+    name: Publish Binary on cargo
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: setup cargo
+        run: rustup toolchain add stable
+      - name: publish
+        run: cargo publish --allow-dirty
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_TOKEN }}
   publish:
     name: Publish
     runs-on: ubuntu-latest
