--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -175,6 +175,7 @@ jobs:
     needs:
       - build
       - universal-macOS
+      - publish-cargo
     steps:
       - uses: actions/checkout@v4
       - name: Setup node
