--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = "2021"
-name = "ahqstore_cli"
-version = "0.3.1"
+name = "ahqstore_cli_rs"
+version = "0.3.0"
 description = "AHQ Store CLI"
 repository = "https://github.com/ahqstore/cli"
 homepage = "https://github.com/ahqstore/cli"
@@ -34,7 +34,7 @@ image = { version = "0.25", default-features = false, features = ["rayon", "png"
 rand = "0.8.5"
 
 [target.'cfg(unix)'.dependencies]
-openssl-sys = { version = "*", features = ["vendored"] }
+openssl-sys = { version = "0.9.102", features = ["vendored"] }
 
 
 [build-dependencies]
