--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = "2021"
 name = "ahqstore_cli_rs"
-version = "0.3.0"
+version = "0.3.1"
 description = "AHQ Store CLI"
 repository = "https://github.com/ahqstore/cli"
 homepage = "https://github.com/ahqstore/cli"
@@ -9,7 +9,7 @@ license = "MIT"
 readme = "README.md"
 
 [lib]
-name = "ahqstore_cli"
+name = "ahqstore_cli_rs"
 crate-type = ["cdylib"]
 path = "src/lib.rs"
 
