--- a/npm/darwin-arm64/package.json
+++ b/npm/darwin-arm64/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ahqstore/cli-darwin-arm64",
-  "version": "0.0.0",
+  "version": "0.3.3",
   "os": [
     "darwin"
   ],
@@ -11,6 +11,9 @@
   "files": [
     "cli.darwin-arm64.node"
   ],
+  "repository": {
+    "url": "https://github.com/ahqstore/cli"
+  },
   "license": "MIT",
   "engines": {
     "node": ">= 10"
