--- a/npm/darwin-x64/package.json
+++ b/npm/darwin-x64/package.json
@@ -1,12 +1,15 @@
 {
   "name": "@ahqstore/cli-darwin-x64",
-  "version": "0.0.0",
+  "version": "0.3.3",
   "os": [
     "darwin"
   ],
   "cpu": [
     "x64"
   ],
+  "repository": {
+    "url": "https://github.com/ahqstore/cli"
+  },
   "main": "cli.darwin-x64.node",
   "files": [
     "cli.darwin-x64.node"
