--- a/npm/linux-arm64-gnu/package.json
+++ b/npm/linux-arm64-gnu/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ahqstore/cli-linux-arm64-gnu",
-  "version": "0.0.0",
+  "version": "0.3.3",
   "os": [
     "linux"
   ],
@@ -11,6 +11,9 @@
   "files": [
     "cli.linux-arm64-gnu.node"
   ],
+  "repository": {
+    "url": "https://github.com/ahqstore/cli"
+  },
   "license": "MIT",
   "engines": {
     "node": ">= 10"
