--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = "2021"
 name = "ahqstore_cli_rs"
-version = "0.3.4"
+version = "0.3.5"
 description = "AHQ Store CLI"
 repository = "https://github.com/ahqstore/cli"
 homepage = "https://github.com/ahqstore/cli"
@@ -19,7 +19,9 @@ path = "src/main.rs"
 
 [dependencies]
 # Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
-napi = { version = "2.12.2", default-features = false, features = ["napi4"], optional = true }
+napi = { version = "2.12.2", default-features = false, features = [
+  "napi4",
+], optional = true }
 napi-derive = { version = "2.12.2", optional = true }
 inquire = { version = "0.7.5", features = ["editor"] }
 chalk_rs = "1.0.1"
@@ -30,7 +32,10 @@ ahqstore-types = "2.0.0"
 reqwest = { version = "0.12", features = ["json", "blocking"] }
 sha2 = "0.10.8"
 base64 = "0.22.1"
-image = { version = "0.25", default-features = false, features = ["rayon", "png"]}
+image = { version = "0.25", default-features = false, features = [
+  "rayon",
+  "png",
+] }
 rand = "0.8.5"
 
 [target.'cfg(unix)'.dependencies]
@@ -38,7 +43,7 @@ openssl-sys = { version = "0.9.102", features = ["vendored"] }
 
 
 [build-dependencies]
-napi-build = {version = "2.0.1", optional = true}
+napi-build = { version = "2.0.1", optional = true }
 
 [profile.release]
 lto = true
