--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,9 @@
+[target.i686-unknown-linux-gnu]
+linker = "i686-linux-gnu-gcc"
+rustflags = ["-C", "target-feature=-crt-static"]
+
 [target.aarch64-unknown-linux-gnu]
-linker="aarch64-linux-gnu-gcc"
+linker = "aarch64-linux-gnu-gcc"
 rustflags = ["-C", "target-feature=-crt-static"]
 
 [target.x86_64-pc-windows-msvc]
