--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@ahqstore/cli",
-  "version": "0.4.3",
+  "version": "0.5.0",
+  "readme": "./README.md",
   "napi": {
     "name": "cli",
     "triples": {
@@ -16,7 +17,7 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@napi-rs/cli": "^2.18.3"
+    "@napi-rs/cli": "^2.18.4"
   },
   "ava": {
     "timeout": "3m"
